add GET & POST product + bugfix in swagger docs
