# models/product.js
@@ -1,5 +1,44 @@
 const mongoose = require("mongoose");
 Schema = mongoose.Schema;
+const Joi = require("@hapi/joi");
+Joi.objectId = require("joi-objectid")(Joi);
+
+function validateProduct(product) {
+  const schema = Joi.object({
+    name: Joi.string()
+      .min(3)
+      .max(255)
+      .required(),
+    category: Joi.object({
+      _id: Joi.objectId(),
+      name: Joi.string()
+    }).required(),
+    entities: Joi.array()
+      .items(
+        Joi.object({
+          identifier: Joi.string()
+            .required()
+            .min(1)
+            .max(64),
+          availableForRental: Joi.boolean().required(),
+          remarks: Joi.string().required()
+        })
+      )
+      .required(),
+    numberOfLoans: Joi.number(),
+    description: Joi.string().required(),
+    details: Joi.array()
+      .items(
+        Joi.object({
+          displayName: Joi.string().required(),
+          value: Joi.string().required()
+        })
+      )
+      .required()
+  });
+
+  return schema.validate(product);
+}
 
 const productSchema = new Schema({
   name: {
@@ -33,9 +72,7 @@ const productSchema = new Schema({
   },
   description: {
     type: String,
-    required: true,
-    minlength: 5,
-    maxlength: 500
+    required: true
   },
   details: [
     {
@@ -48,3 +85,4 @@ const productSchema = new Schema({
 const Product = mongoose.model("product", productSchema);
 
 module.exports.Product = Product;
+module.exports.validateProduct = validateProduct;
