# swagger.yaml
@@ -6,68 +6,81 @@ servers:
   - url: http://localhost:3900/api
 
 paths:
+  /products/{id}:
+    get:
+      description: Returns a specific product
+      responses:
+        "200":
+          description: A JSON object representing the product
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Product"
+
   /products:
     get:
       summary: Returns a list of all products
       description: Use to request all products
       responses:
         200:
-          description: A JSON array of procuts
+          description: A JSON array of products
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  _id:
-                    type: string
-                    example: 5e539c042f9afe16e09ca244
-                  name:
-                    type: string
-                    example: Playstation 4
-                  category:
-                    type: object
-                    properties:
-                      _id:
-                        type: string
-                        example: 5e539c042f9afe16e09ca244
-                      name:
-                        type: string
-                        example: John Smith
-                      entities:
-                        type: array
-                        items:
-                          type: object
-                          properties:
-                            identifier:
-                              type: string
-                            availableForRental:
-                              type: boolean
-                            remarks:
-                              type: string
-                          example:
-                            - identifier: PS4_1
-                              availableForRental: false
-                              remarks: Scratches
-                            - identifier: PS4_2
-                              availableForRental: true
-                              remarks:
-                  numOfLoans:
-                    type: number
-                    example: 10
-                  description:
-                    type: string
-                    example: A Playstation 4 console
-                  details:
-                    type: array
-                    items:
-                      type: object
-                      properties:
-                        displayName:
-                          type: string
-                        value:
-                          type: string
-                      example:
-                        - displayName: Maximum players
-                          value: 4
-                        - displayName: Minimum players
-                          value: 1
+                type: array
+                items:
+                  $ref: "#/components/schemas/Product"
+
+components:
+  schemas:
+    Product:
+      type: object
+      properties:
+        _id:
+          type: string
+          example: 5e539c042f9afe16e09ca244
+        name:
+          type: string
+          example: Playstation 4
+        category:
+          type: object
+          properties:
+            _id:
+              type: string
+              example: 5e539c042f9afe16e09ca244
+            name:
+              type: string
+              example: Gaming Consoles
+        entities:
+          type: array
+          items:
+            type: object
+            properties:
+              identifier:
+                type: string
+              availableForRental:
+                type: boolean
+              remarks:
+                type: string
+            example:
+              identifier: PS4_1
+              availableForRental: false
+              remarks: Scratches
+        numberOfLoans:
+          type: number
+          example: 10
+        description:
+          type: string
+          example: A Playstation 4 console
+        details:
+          type: array
+          items:
+            type: object
+            properties:
+              displayName:
+                type: string
+              value:
+                type: string
+            example:
+              displayName: Maximum players
+              value: "4"
